--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@
 
 make background scroll up when scrolling
 
-make nav sticky
-
 add work experience, education, projects
 
-implement fade in animation for work experience, education, projects
+fix fade animation
