--- a/todo.txt
+++ b/todo.txt
@@ -4,4 +4,4 @@ make background scroll up when scrolling
 
 add work experience, education, projects
 
-fix fade animation
+figure out if navbar issue is only with live server or if caused by something else
